crates/aether-actor-derive/tests/ui/rejects_accessor_without_state.stderr
error: `dehydrate` / `rehydrate` are the ADR-0113 persistence accessors and require a `type State = …` declaration; add it, or rename the method if it is an unrelated helper
  --> tests/ui/rejects_accessor_without_state.rs:42:5
   |
42 | /     fn dehydrate(&self) -> CounterState {
43 | |         CounterState { count: self.count }
44 | |     }
   | |_____^
